k8s/kafka/kafka-jmx-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-jmx-exporter
  namespace: iot-pipeline
  labels:
    app: kafka-jmx-exporter
spec:
  type: ClusterIP
  ports:
  - port: 9101
    targetPort: 9101
    name: metrics
  selector:
    app: kafka-jmx-exporter
