k8s/kafka/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: iot-pipeline
  labels:
    app: kafka
spec:
  type: ClusterIP 
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
  - name: jmx
    port: 7071
    targetPort: 7071
  selector:
    app: kafka
